feat: swagger documentation
