# internal/app/authentication/auth_handler.go
@@ -18,29 +18,62 @@ func NewHandler(authService IService) *Handler {
 	}
 }
 
+// Register
+// @BasePath /api/v1/auth
+// @Summary Register a new user
+// @Description Register a new user
+// @Tags Authentication
+// @Accept json
+// @Produce json
+// @Param user body dto.UserDTO true "User object"
+// @Success 200 {object} dto.UserDTO
+// @Failure 400 {object} dto.ErrorResponse
+// @Failure 500 {object} dto.ErrorResponse
+// @Router /register [post]
 func (h *Handler) Register(c *gin.Context) {
 	var userDTO dto.UserDTO
+	var errorResponse dto.ErrorResponse
 	if err := c.ShouldBindJSON(&userDTO); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		errorResponse.Message = "Invalid request body"
+		errorResponse.ErrorCode = http.StatusBadRequest
+		c.JSON(http.StatusBadRequest, errorResponse)
 		return
 	}
 
 	response, err := h.authService.Register(userDTO)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		errorResponse.Message = err.Error()
+		errorResponse.ErrorCode = http.StatusInternalServerError
+		c.JSON(http.StatusInternalServerError, errorResponse)
 		return
 	}
 
 	c.JSON(http.StatusOK, response)
 }
 
+// Login
+// @BasePath /api/v1/auth
+// @Summary Login
+// @Description Login
+// @Tags Authentication
+// @Accept json
+// @Produce json
+// @Param email formData string true "Email"
+// @Param password formData string true "Password"
+// @Success 200 {object} dto.TokenDto
+// @Failure 400 {object} dto.ErrorResponse
+// @Failure 500 {object} dto.ErrorResponse
+// @Router /login [post]
 func (h *Handler) Login(c *gin.Context) {
+	var errorResponse dto.ErrorResponse
 	email := c.PostForm("email")
 	password := c.PostForm("password")
 
 	tokenDetails, err := h.authService.Login(email, password)
 	if err != nil {
-		c.JSON(http.StatusUnauthorized, gin.H{"error": err.Error()})
+		errorResponse.Message = err.Error()
+		errorResponse.ErrorCode = http.StatusUnauthorized
+		c.JSON(http.StatusUnauthorized, errorResponse)
 		return
 	}
 	response := dto.TokenDto{
@@ -51,33 +84,59 @@ func (h *Handler) Login(c *gin.Context) {
 	c.JSON(http.StatusOK, response)
 }
 
+// Logout
+// @BasePath /api/v1/auth
+// @Summary Logout
+// @Description Logout
+// @Tags Authentication
+// @Accept json
+// @Produce json
+// @Param Authorization header string true "Authorization"
+// @Success 200 {object} string
+// @Failure 400 {object} dto.ErrorResponse
+// @Failure 500 {object} dto.ErrorResponse
+// @Router /logout [get]
 func (h *Handler) Logout(c *gin.Context) {
+	var errorResponse dto.ErrorResponse
 	accessToken, err := ExtractTokenFromHeader(c.GetHeader("Authorization"))
 	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		errorResponse.Message = err.Error()
+		errorResponse.ErrorCode = http.StatusBadRequest
+		c.JSON(http.StatusBadRequest, errorResponse)
 		return
 	}
 
 	err = h.authService.Logout(accessToken)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		errorResponse.Message = err.Error()
+		errorResponse.ErrorCode = http.StatusInternalServerError
+		c.JSON(http.StatusInternalServerError, errorResponse)
 		return
 	}
+	response := dto.SuccessResponse{
+		Message:    "Logged out successfully",
+		StatusCode: http.StatusOK,
+	}
 
-	c.JSON(http.StatusOK, gin.H{"message": "Logged out successfully"})
+	c.JSON(http.StatusOK, response)
 }
 
 func (h *Handler) RefreshToken(c *gin.Context) {
 	var tokenDto dto.TokenDto
+	var errorResponse dto.ErrorResponse
 
 	if err := c.ShouldBindJSON(&tokenDto); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid request body"})
+		errorResponse.Message = "Invalid request body"
+		errorResponse.ErrorCode = http.StatusBadRequest
+		c.JSON(http.StatusBadRequest, errorResponse)
 		return
 	}
 
 	tokenDetails, err := h.authService.RefreshToken(tokenDto.RefreshToken)
 	if err != nil {
-		c.JSON(http.StatusUnauthorized, gin.H{"error": err.Error()})
+		errorResponse.Message = err.Error()
+		errorResponse.ErrorCode = http.StatusUnauthorized
+		c.JSON(http.StatusUnauthorized, errorResponse)
 		return
 	}
 	response := dto.TokenDto{
@@ -87,57 +146,130 @@ func (h *Handler) RefreshToken(c *gin.Context) {
 	c.JSON(http.StatusOK, response)
 }
 
+// IsUserAuthenticated
+// @BasePath /api/v1/auth
+// @Summary IsUserAuthenticated
+// @Description IsUserAuthenticated
+// @Tags Authentication
+// @Accept json
+// @Produce json
+// @Param token body string true "accesstoken"
+// @Success 200 {object} dto.AuthenticateStatusResponse
+// @Failure 400 {object} dto.ErrorResponse
+// @Failure 500 {object} dto.ErrorResponse
+// @Router /is-user-authenticated [post]
 func (h *Handler) IsUserAuthenticated(c *gin.Context) {
 	var tokenDto dto.TokenDto
+	var errorResponse dto.ErrorResponse
 	if err := c.ShouldBindJSON(&tokenDto); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid request body"})
+		errorResponse.Message = "Invalid request body"
+		errorResponse.ErrorCode = http.StatusBadRequest
+		c.JSON(http.StatusBadRequest, errorResponse)
 		return
 	}
 
 	isAuthenticated, err := h.authService.IsUserAuthenticated(tokenDto.AccessToken)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		errorResponse.Message = err.Error()
+		errorResponse.ErrorCode = http.StatusInternalServerError
+		c.JSON(http.StatusInternalServerError, errorResponse)
 		return
+	}
+	authenticateStatusResponse := dto.AuthenticateStatusResponse{
+		IsAuthenticated: isAuthenticated,
 	}
 
 	if isAuthenticated {
-		c.JSON(http.StatusOK, gin.H{"authenticated": true})
+		authenticateStatusResponse.StatusCode = http.StatusOK
+		c.JSON(http.StatusOK, authenticateStatusResponse)
 	} else {
-		c.JSON(http.StatusUnauthorized, gin.H{"authenticated": false})
+		authenticateStatusResponse.StatusCode = http.StatusUnauthorized
+		c.JSON(http.StatusUnauthorized, authenticateStatusResponse)
 	}
 }
 
+// RequestPasswordReset
+// @BasePath /api/v1/auth
+// @Summary RequestPasswordReset
+// @Description RequestPasswordReset
+// @Tags Authentication
+// @Accept json
+// @Produce json
+// @Param email formData string true "Email"
+// @Success 200 {object} string
+// @Failure 400 {object} dto.ErrorResponse
+// @Failure 500 {object} dto.ErrorResponse
+// @Router /request-password-reset [post]
 func (h *Handler) RequestPasswordReset(c *gin.Context) {
+	var errorResponse dto.ErrorResponse
 	email := c.PostForm("email")
 
-	resetToken, _, err := h.authService.RequestPasswordReset(email)
+	_, _, err := h.authService.RequestPasswordReset(email)
 	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		errorResponse.Message = err.Error()
+		errorResponse.ErrorCode = http.StatusInternalServerError
+		c.JSON(http.StatusBadRequest, errorResponse)
 		return
 	}
-
-	c.JSON(http.StatusOK, gin.H{
-		"resetToken": resetToken,
-	})
+	response := dto.SuccessResponse{
+		Message:    "Password reset token sent successfully",
+		StatusCode: http.StatusOK,
+	}
+	c.JSON(http.StatusOK, response)
 }
 
+// ConfirmPasswordReset
+// @BasePath /api/v1/auth
+// @Summary ConfirmPasswordReset
+// @Description ConfirmPasswordReset
+// @Tags Authentication
+// @Accept json
+// @Produce json
+// @Param reset-token path string true "reset-token"
+// @Param newPassword formData string true "newPassword"
+// @Success 200 {object} string
+// @Failure 400 {object} dto.ErrorResponse
+// @Failure 500 {object} dto.ErrorResponse
+// @Router /confirm-password-reset [post]
 func (h *Handler) ConfirmPasswordReset(c *gin.Context) {
+	var errorResponse dto.ErrorResponse
 	token := c.Query("reset-token")
 	newPassword := c.PostForm("newPassword")
 
 	err := h.authService.ConfirmPasswordReset(token, newPassword)
 	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		errorResponse.Message = err.Error()
+		errorResponse.ErrorCode = http.StatusBadRequest
+		c.JSON(http.StatusBadRequest, errorResponse)
 		return
 	}
-
-	c.JSON(http.StatusOK, gin.H{"message": "Password reset successfully"})
+	response := dto.SuccessResponse{
+		Message:    "Password reset successfully",
+		StatusCode: http.StatusOK,
+	}
+	c.JSON(http.StatusOK, response)
 }
 
+// ChangePassword
+// @BasePath /api/v1/auth
+// @Summary ChangePassword
+// @Description ChangePassword
+// @Tags Authentication
+// @Accept json
+// @Produce json
+// @Param Authorization header string true "Authorization"
+// @Param newPassword formData string true "newPassword"
+// @Success 200 {object} dto.SuccessResponse
+// @Failure 400 {object} dto.ErrorResponse
+// @Failure 500 {object} dto.ErrorResponse
+// @Router /change-password [post]
 func (h *Handler) ChangePassword(c *gin.Context) {
+	var errorResponse dto.ErrorResponse
 	accessToken, err := ExtractTokenFromHeader(c.GetHeader("Authorization"))
 	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		errorResponse.Message = err.Error()
+		errorResponse.ErrorCode = http.StatusBadRequest
+		c.JSON(http.StatusBadRequest, errorResponse)
 		return
 	}
 
@@ -145,11 +277,17 @@ func (h *Handler) ChangePassword(c *gin.Context) {
 
 	err = h.authService.ChangePassword(accessToken, newPassword)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		errorResponse.Message = err.Error()
+		errorResponse.ErrorCode = http.StatusInternalServerError
+		c.JSON(http.StatusInternalServerError, errorResponse)
 		return
 	}
+	response := dto.SuccessResponse{
+		Message:    "Password changed successfully",
+		StatusCode: http.StatusOK,
+	}
 
-	c.JSON(http.StatusOK, gin.H{"message": "Password changed successfully"})
+	c.JSON(http.StatusOK, response)
 }
 
 func ExtractTokenFromHeader(header string) (string, error) {
